--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_activity_search_breed">SearchBreed</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_my_dog_detail">MyDogDetail</string>
+    <string name="title_activity_same_dog">SameDogActivity</string>
 </resources>
