--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Dog Finder</string>
     <string name="title_activity_mydog2">Mydog2</string>
     <string name="title_activity_dog_add_info">DogAddInforActivity</string>
     <string name="title_activity_search_breed">SearchBreed</string>
