--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="title_activity_my_dog_detail">MyDogDetail</string>
     <string name="title_activity_same_dog">SameDogActivity</string>
     <string name="title_activity_found_post">FoundPostActivity</string>
+    <string name="title_activity_found_post_detail">FoundPostDetail</string>
 </resources>
