--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
-    <string name="app_name">DogFinderTest</string>
+    <string name="app_name">PawPal</string>
     <string name="action_settings">Settings</string>
     <string name="action_account">My Account</string>
     <string name="action_logout">Log out</string>
     <string name="app_id">296429224087474</string>
     <string name="title_activity_my_dog">My Dog</string>
+    <string name="facebook_app_id">720734044776444</string>
+    <string name="fb_login_protocol_scheme">fb720734044776444</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
